# Alecz-Discord-bot

./: .env.template  .gitignore  Dockerfile  README.md  alecz.py  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  uv.yml
